--- a/lottery/public/index.html
+++ b/lottery/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>lottery</title>
+    <script src="./flexible(2).js"></script>
+    <script src="./flexible_css(2).js"></script>
   </head>
   <body>
     <noscript>
