--- a/lottery/public/index.html
+++ b/lottery/public/index.html
@@ -16,4 +16,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+  <script src="flexible(2).js"></script>
+  <script src="flexible_css(2).js"></script>
 </html>
